--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         sunriseSunset = '1.1.1'
         klaxon = '2.0.11'
         json = '20171018'
+        slf4j = '1.7.25'
     }
 
     repositories {
