--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -7,11 +7,7 @@ apply plugin: 'maven-publish'
 sourceCompatibility = 1.8
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = '1.8'
 }
 
 javadoc.failOnError = false
