--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,34 +2,15 @@ description = 'libticker-sample'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = '1.8'
 }
 
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-javadoc.failOnError = false
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
+mainClassName = 'org.jraf.libticker.sample.Sample'
 
 dependencies {
     // Kotlin
@@ -51,4 +32,4 @@ dependencies {
     implementation project(':plugins')
 }
 
-// Use "./gradlew install" to deploy the artifacts to your local maven repository
+// Use "./gradlew run" to run the sample
