--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -22,9 +22,16 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-artifacts {
-    archives sourcesJar
-    archives javadocJar
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifactId project.description
+
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
 }
 
 dependencies {
@@ -53,10 +60,10 @@ dependencies {
     implementation "com.beust:klaxon:$versions.klaxon"
 
     // Plugin api
-    compileOnly project(':plugin-api')
+    implementation project(':plugin-api')
 
     // Slf4j
     implementation "org.slf4j:slf4j-api:$versions.slf4j"
 }
 
-// Use "./gradlew install" to deploy the artifacts to your local maven repository
+// Use "./gradlew publishToMavenLocal" to deploy the artifacts to your local maven repository
