--- a/plugins/src/main/resources/org/jraf/libticker/plugin/btc/BtcPlugin.properties
+++ b/plugins/src/main/resources/org/jraf/libticker/plugin/btc/BtcPlugin.properties
@@ -1,1 +1,1 @@
-btc_value=1<small>\u0E3F</small>\u00A0=\u00A0%1$d<small>\u20AC</small>
+btc_value=1<small>\u0E3F</small> = %1$d<small>\u20AC</small>
