--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 
 compileKotlin {
-    kotlinOptions.jvmTarget = '1.6'
+    kotlinOptions.jvmTarget = versions.build.kotlinJvmTarget
 }
 
 javadoc.failOnError = false
@@ -34,7 +34,7 @@ publishing {
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
     // JUnit
     testImplementation "junit:junit:$versions.junit"
