--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,14 +5,14 @@ apply plugin: 'kotlin'
 apply plugin: 'application'
 
 compileKotlin {
-    kotlinOptions.jvmTarget = '1.6'
+    kotlinOptions.jvmTarget = versions.build.kotlinJvmTarget
 }
 
 mainClassName = 'org.jraf.libticker.sample.SampleKt'
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
     // Rx
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin"
