Add Message class with several fields, instead of using String

--- a/plugins/src/main/resources/org/jraf/libticker/plugin/btc/BtcPlugin.properties
+++ b/plugins/src/main/resources/org/jraf/libticker/plugin/btc/BtcPlugin.properties
@@ -1,1 +1,2 @@
-btc_value=1<small>\u0E3F</small> = %1$d<small>\u20AC</small>
+btc_value_plain=1 \u0E3F = %1$d \u20AC
+btc_value_formatted=1<small>\u0E3F</small> = %1$d<small>\u20AC</small>
