--- a/plugins/src/main/resources/org/jraf/libticker/plugin/weather/WeatherPlugin.properties
+++ b/plugins/src/main/resources/org/jraf/libticker/plugin/weather/WeatherPlugin.properties
@@ -1,3 +1,6 @@
-weather_now=%1$s %2$.1f<small>\u00BAC</small>
-weather_min=<font color="#80B3C0">\u25BE %1$.1f<small>\u00BAC</small></font>
-weather_max=<font color="#A83434">\u25B4 %1$.1f<small>\u00BAC</small></font>
+weather_now_plain=%1$s %2$.1f\u00BAC
+weather_min_plain=min %1$.1f\u00BAC
+weather_max_plain=max %1$.1f\u00BAC
+weather_now_formatted=%1$s %2$.1f<small>\u00BAC</small>
+weather_min_formatted=<font color="#80B3C0">\u25BE %1$.1f<small>\u00BAC</small></font>
+weather_max_formatted=<font color="#A83434">\u25B4 %1$.1f<small>\u00BAC</small></font>
