--- a/plugin-api/build.gradle
+++ b/plugin-api/build.gradle
@@ -5,7 +5,11 @@ apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 
 compileKotlin {
-    kotlinOptions.jvmTarget = versions.build.kotlinJvmTarget
+    kotlinOptions {
+        jvmTarget = versions.build.kotlinJvmTarget
+        // Ensure the kotlin module name is unique
+        freeCompilerArgs += ['-module-name', "$project.group.$project.name"]
+    }
 }
 
 javadoc.failOnError = false
