--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,7 +5,11 @@ apply plugin: 'kotlin'
 apply plugin: 'application'
 
 compileKotlin {
-    kotlinOptions.jvmTarget = versions.build.kotlinJvmTarget
+    kotlinOptions {
+        jvmTarget = versions.build.kotlinJvmTarget
+        // Ensure the kotlin module name is unique
+        freeCompilerArgs += ['-module-name', "$project.group.$project.name"]
+    }
 }
 
 mainClassName = 'org.jraf.libticker.sample.SampleKt'
