--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation "junit:junit:$versions.junit"
 
     // Rx
+    implementation "io.reactivex.rxjava2:rxjava:$versions.rxJava"
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin"
 
     // Twitter4J
