--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
     // Rx
+    implementation "io.reactivex.rxjava2:rxjava:$versions.rxJava"
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin"
 
     // Slf4j
