--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,6 @@ build
 out
 .gradle
 *.iml
-.idea/libraries
-.idea/modules
-.idea/compiler.xml
-.idea/gradle.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/runConfigurations
+.idea
+!.idea/copyright
+!.idea/codeStyles
