--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 
     // Plugins
     implementation project(':plugins')
+
+//    // Http conf
+//    implementation project(':httpconf')
 }
 
 // Use "./gradlew run" to run the sample
