--- a/core/build.gradle
+++ b/core/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$versions.rxJava"
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin"
 
+    // Klaxon
+    implementation "com.beust:klaxon:$versions.klaxon"
+
     // Plugin api
     api project(':plugin-api')
 }
