--- a/gradle/repos.gradle
+++ b/gradle/repos.gradle
@@ -4,5 +4,6 @@ RepositoryHandler.metaClass.addRepos = {
         mavenLocal()
         google()
         jcenter()
+        mavenCentral()
     }
 }
