--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -4,7 +4,7 @@ def versions = [:]
 // Plugins
 def plugins = [:]
 plugins.with {
-    gradleVersions = '0.20.0'
+    gradleVersions = '0.21.0'
 }
 versions.plugins = plugins
 
@@ -18,7 +18,7 @@ versions.buildLibs = buildLibs
 // Build parameters
 def build = [:]
 build.with {
-    gradle = '5.0'
+    gradle = '5.2.1'
     kotlinJvmTarget = '1.6'
 }
 versions.build = build
@@ -32,18 +32,19 @@ versions.testing = testing
 
 // Other dependencies
 versions.with {
-    kotlin = '1.3.11'
-    rxJava = '2.2.4'
+    kotlin = '1.3.21'
+    coroutines = '1.0.1'
+    rxJava = '2.2.7'
     rxKotlin = '2.3.0'
     okHttp = '3.9.0'
     twitter4j = '4.0.7'
     forecastIo = '1.6.0'
     sunriseSunset = '1.1.1'
-    klaxon = '5.0.1'
-    slf4j = '1.7.25'
+    klaxon = '5.0.5'
+    slf4j = '1.7.26'
     libFrc = '1.8.2'
     nanohttpd = '2.3.1'
-    kotlinxHtml = "0.6.10"
+    kotlinxHtml = "0.6.12"
 }
 
 ext.versions = versions
