--- a/gradle/repos.gradle
+++ b/gradle/repos.gradle
@@ -5,5 +5,6 @@ RepositoryHandler.metaClass.addRepos = {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://dl.bintray.com/bod/JRAF' }
     }
 }
