--- a/versions.properties
+++ b/versions.properties
@@ -6,7 +6,27 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+
 plugin.org.jetbrains.dokka=1.9.10
+version.com.google.photos.library..google-photos-library-client=1.7.3
+version.com.google.api-client..google-api-client=2.2.0
+version.rxjava2.rxkotlin=2.4.0
+version.rxjava2.rxjava=2.2.21
+version.org.twitter4j..twitter4j-core=4.1.2
+version.org.slf4j..slf4j-simple=2.0.11
+##                  # available=2.1.0-alpha0
+##                  # available=2.1.0-alpha1
+version.org.slf4j..slf4j-api=2.0.11
+##               # available=2.1.0-alpha0
+##               # available=2.1.0-alpha1
+version.org.nanohttpd..nanohttpd=2.3.1
+version.org.jraf..klibappstorerating=1.1.1
+version.kotlinx.html=0.10.1
+version.com.github.dvdme..ForecastIOLib=1.6.0
+version.com.beust..klaxon=5.6
+version.ca.rmen..lib-sunrise-sunset=1.1.1
+version.ca.rmen..lib-french-revolutionary-calendar=1.8.2
+
 version.kotlin=1.9.22
 ## # available=2.0.0-Beta1
 ## # available=2.0.0-Beta2
